syntax = "proto3";
package com.pim.domain;

message Product {
  string id = 1;
  string name = 2;
  string supplier = 3;
}

message ProductCreated {
  Product product = 1;
}
